testsuite/escript/func/funcref06.err
funcref06.src:1:5: error: missing ';' at '('